have to check gyroscope

--- a/public/index.html
+++ b/public/index.html
@@ -227,11 +227,11 @@
                                         <div class="wind-settings">
                                             <input type="radio" name="settings-subitems" id="wind-subitem-3" class="settings-subitems-input">
                                             <label for="wind-subitem-3" class="wind-subitem_label">
-                                                <h3>Wind direction (only for mobile devices)</h3>
+                                                <h3>Wind direction <br>(only for mobile devices)</h3>
                                             </label>
                                             <div class="settings-subitem">
                                                
-                                                <p>This function enables auto-positioning of the wind arrow relative to the North Pole. May not work on every device. If the compass doesn't work correctly, consider recalibrate it in the Google/Apple Maps.</p>
+                                                <p>This function enables auto-positioning of the wind arrow relative to the North Pole.<br> May not work on every device. <br>If the compass doesn't work correctly, consider recalibrate it in the Google/Apple Maps.</p>
                                                 <input type="radio" name="wind-item" id="wind-1" value='true' class='wind-input' />
                                                 <label for="wind-1" class="wind_labels"><span class="turn_wind">On</span></label>
                                                 <input type="radio" name="wind-item" id="wind-2" value='false' class='wind-input' checked />
