--- a/public/index.html
+++ b/public/index.html
@@ -548,6 +548,7 @@
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"></script>
+    <script src="fulltilt.js"></script>
     <script src="script_n_dark.min.js"></script>
 </body>
 </html>
