Revert "Update index.html"
This reverts commit c19667b9e1206cfc4d1d7704074dd9b2c3cf90e2.

--- a/public/index.html
+++ b/public/index.html
@@ -230,7 +230,7 @@
                                         <div class="wind-settings">
                                             
                                             <label for="wind-subitem-3" class="wind-subitem_label">
-                                                <h3>Wind direction <br><span>(only for mobile devices)</span></h3>
+                                                <h3>Wind direction <br>(only for mobile devices)</h3>
                                             </label>
                                             <div class="settings-subitem">
                                                
