--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <link rel="shortcut icon" href="https://open-window-videos.s3.eu-west-2.amazonaws.com/img/icons/icon.ico" type="image/x-icon">
 </head>
 <body>
-    <video id="videoBG" autoplay='true' muted='true' loop='true' class="no_opacity">
+    <video id="videoBG" autoplay='autoplay' muted='muted' loop='loop' class="no_opacity">
  
     </video>
 
