--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,16 @@
 
     <title>OpenWindow | Fast service to deliver the most accurate forecast</title>
     <link rel="shortcut icon" href="https://open-window-videos.s3.eu-west-2.amazonaws.com/img/icons/icon.ico" type="image/x-icon">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-179824630-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-179824630-1');
+    </script>
+
 </head>
 <body>
     <video id="videoBG" autoplay='autoplay' muted='muted' loop='loop' class="no_opacity">
