--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <title>OpenWindow | Fast service to deliver the most accurate forecast</title>
     <link rel="shortcut icon" href="https://open-window-videos.s3.eu-west-2.amazonaws.com/img/icons/icon.ico" type="image/x-icon">
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-179824630-1"></script>
+     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-179824630-1"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
@@ -19,7 +19,7 @@
 
         gtag('config', 'UA-179824630-1');
     </script>
-    <script data-ad-client="ca-pub-1262555567645154" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
+    <script data-ad-client="ca-pub-1262555567645154" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
 </head>
 <body>
@@ -592,6 +592,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"></script>
     <script src="fulltilt.js"></script>
-    <script src="script_n_dark.js"></script>
+    <script src="script_n_dark.min.js"></script>
 </body>
 </html>
