--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <title>OpenWindow | Fast service to deliver the most accurate forecast</title>
     <link rel="shortcut icon" href="https://open-window-videos.s3.eu-west-2.amazonaws.com/img/icons/icon.ico" type="image/x-icon">
     <!-- Global site tag (gtag.js) - Google Analytics -->
-     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-179824630-1"></script>
+     <!--<script async src="https://www.googletagmanager.com/gtag/js?id=UA-179824630-1"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
@@ -19,7 +19,7 @@
 
         gtag('config', 'UA-179824630-1');
     </script>
-    <script data-ad-client="ca-pub-1262555567645154" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script data-ad-client="ca-pub-1262555567645154" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>-->
 
 </head>
 <body>
