--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 
     <title>OpenWindow | Fast service to deliver the most accurate forecast</title>
-    <link rel="shortcut icon" href="https://open-window-videos.s3.eu-west-2.amazonaws.com/img/icons/icon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="https://d3aid59h00lu28.cloudfront.net/img/icons/icon.ico" type="image/x-icon">
     <!-- Global site tag (gtag.js) - Google Analytics -->
        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-179824630-1"></script>
     <script>
@@ -276,7 +276,8 @@
                                         </svg>
                                     <input type="search" name="" id="city_input" placeholder="City name...">
                                 </div>
-                                <img src="https://open-window-videos.s3.eu-west-2.amazonaws.com/img/search.svg" alt="" class="settings_icon">
+                                <img src="https://d3aid59h00lu28.cloudfront.net/img/search.svg" alt="" class="settings_icon">
+                                <img src="https://d3aid59h00lu28.cloudfront.net/img/cursor.svg" alt="" class="settings_icon">
                             </div>
                         </div>
                             
