--- a/public/index.html
+++ b/public/index.html
@@ -10,14 +10,14 @@
     <link rel="shortcut icon" href="https://d3aid59h00lu28.cloudfront.net/img/icons/icon.ico" type="image/x-icon">
     <!-- Global site tag (gtag.js) - Google Analytics -->
        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-179824630-1"></script>
-    <script>
+    <!-- <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
 
         gtag('config', 'UA-179824630-1');
     </script>
-    <script data-ad-client="ca-pub-1262555567645154" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> 
+    <script data-ad-client="ca-pub-1262555567645154" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>  -->
 
 </head>
 <body>
