--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.min.css">
 
     <title>OpenWindow | Fast service to deliver the most accurate forecast</title>
     <link rel="shortcut icon" href="https://d3aid59h00lu28.cloudfront.net/img/icons/icon.ico" type="image/x-icon">
