--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,10 @@
 
     <title>OpenWindow | Fast service to deliver the most accurate forecast</title>
     <link rel="shortcut icon" rel="preload" href="https://d3aid59h00lu28.cloudfront.net/img/icons/icon.ico" type="image/x-icon"> 
+    <link rel="manifest" href="manifest.webmanifest">
+    <link rel="apple-touch-icon" href="https://d3aid59h00lu28.cloudfront.net/img/icons/icon192.png">
+    <link rel="canonical" href="https://open-window.herokuapp.com"/>
+    <meta name="theme-color" content="#00ccff"/>
     <!-- Global site tag (gtag.js) - Google Analytics -->
        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-179824630-1"></script>
     <!-- <script>
