--- a/public/index.html
+++ b/public/index.html
@@ -368,11 +368,12 @@
                 </div>
                
                 <div class="slider_wrap">
+                    
                         <div id="hours">    
                         </div> 
                 </div>
                 <div id="days_wrap">
-                    <div class="days_slider">
+                    <div id="days_slider">
                         <div id="days">
                             <input type="radio" name="days-radio" id="days-fake"class="days_radio" checked>
                         </div>
