--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;700&display=swap" rel="stylesheet" rel="preload">
-    <link rel="stylesheet" href="style.min.css">
+    <link rel="stylesheet" href="style.css">
 
     <title>OpenWindow | Fast service to deliver the most accurate forecast</title>
     <link rel="shortcut icon" rel="preload" href="https://d3aid59h00lu28.cloudfront.net/img/icons/icon.ico" type="image/x-icon"> 
@@ -384,7 +384,7 @@
                     <div class="updating_footer">
                     </div>
                     <a href="https://darksky.net/poweredby/">Powered by Dark Sky API.</a>
-                    <p> Copyright © Vladislav Klimov, <span></span>. All rights reserved.</p>
+                    <p> Copyright © <a href="mailto:klimov.studnweb@gmail.com">Vladislav Klimov,</a> <span></span>. All rights reserved.</p>
 
 
                 </div>
@@ -444,6 +444,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"></script>
     <script src="fulltilt.js"></script>
-    <script src="script_n_dark.min.js"></script>
+    <script src="script_n_dark.js"></script>
 </body>
 </html>
