--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5" />
+    <meta
+    name="description"           
+    content="Самый точный прогноз на 7 дней в любой точке земного шара, 
+     используя метеостанции по всему миру. Без навязчивой рекламы."/>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;700&display=swap" rel="stylesheet" rel="preload">
     <link rel="stylesheet" href="style.min.css">
 
@@ -276,6 +280,7 @@
                                         </g>
                                         </svg>
                                     <input type="search" name="" id="city_input" placeholder="City name...">
+                                    <label for="city_input" style="display: none;">City name...</label>
                                 </div>
                                 <img src="https://d3aid59h00lu28.cloudfront.net/img/search.svg" alt="Search" class="settings_icon">
                             </div>
