--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
 
     <meta name="theme-color" content="#55c1ff"/>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-165464526-1" rel="preload"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-165464526-1" rel="preconnect"></script>
     <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
@@ -276,7 +276,7 @@
                                 <input type="search" name="" id="city_input" placeholder="City name...">
                                 <label for="city_input" style="display: none;">City name...</label>
                             </div>
-                            <img src="https://d3aid59h00lu28.cloudfront.net/img/search.svg" alt="Search" class="settings_icon">
+                            <img src="https://d3aid59h00lu28.cloudfront.net/img/search.svg" width="15px" height="15px" alt="Search" class="settings_icon">
                         </div>
 
                     </div>
