--- a/public/index.html
+++ b/public/index.html
@@ -273,8 +273,9 @@
                                     <g>
                                     </g>
                                     </svg>
+                                <label for="city_input" style="margin-right: 15px;" id="city_input_label"></label>    
                                 <input type="search" name="" id="city_input" placeholder="City name...">
-                                <label for="city_input" style="display: none;">City name...</label>
+                                
                             </div>
                             <img src="https://d3aid59h00lu28.cloudfront.net/img/search.svg" width="15px" height="15px" alt="Search" class="settings_icon">
                         </div>
@@ -373,7 +374,7 @@
             </div>
         </div>
     </div>
-    <a href="#days" class='anchor_wrapper hide_anchor'>
+    <a href="#days" class='anchor_wrapper hide_anchor' aria-label="Scroll down">
         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" viewBox="0 0 384.928 384.928" style="enable-background:new 0 0 384.928 384.928;" class='anchor' xml:space="preserve">
             <g>
                 <path  d="M321.339,245.334c-4.74-4.692-12.439-4.704-17.179,0l-99.551,98.564V12.03   c0-6.641-5.438-12.03-12.151-12.03s-12.151,5.39-12.151,12.03v331.868l-99.551-98.552c-4.74-4.704-12.439-4.704-17.179,0   s-4.74,12.319,0,17.011l120.291,119.088c4.692,4.644,12.499,4.644,17.191,0l120.291-119.088   C326.091,257.653,326.091,250.038,321.339,245.334C316.599,240.642,326.091,250.038,321.339,245.334z"/>
