--- a/public/index.html
+++ b/public/index.html
@@ -273,7 +273,7 @@
                                     <g>
                                     </g>
                                     </svg>
-                                <label for="city_input" style="margin-right: 15px;" id="city_input_label"></label>    
+                                <label for="city_input" id="city_input_label"></label>    
                                 <input type="search" name="" id="city_input" placeholder="City name...">
                                 
                             </div>
