--- a/public/index.html
+++ b/public/index.html
@@ -10,14 +10,14 @@
     <link async href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;700&display=swap" rel="stylesheet" rel="preload">
     <link rel="stylesheet" href="style.min.css">
     <title>OpenWindow | Fast service to deliver the most accurate forecast</title>
-    <link rel="shortcut icon" rel="preload" href="https://d3aid59h00lu28.cloudfront.net/img/icons/icon.ico" type="image/x-icon"> 
+    <link rel="shortcut icon" rel="preload" href="https://d3aid59h00lu28.cloudfront.net/img/icons/icon.ico" type="image/x-icon" crossorigin="anonymous"> 
     <link rel="manifest" href="manifest.webmanifest">
-    <link rel="apple-touch-icon" href="https://d3aid59h00lu28.cloudfront.net/img/icons/icon192.png">
+    <link rel="apple-touch-icon" href="https://d3aid59h00lu28.cloudfront.net/img/icons/icon192.png" crossorigin="anonymous">
     <link rel="canonical" href="https://open-window.herokuapp.com"/>
 
     <meta name="theme-color" content="#55c1ff"/>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-165464526-1" rel="preconnect"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-165464526-1" rel="preconnect" crossorigin="anonymous"></script>
     <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
@@ -277,7 +277,7 @@
                                 <input type="search" name="" id="city_input" placeholder="City name...">
                                 
                             </div>
-                            <img src="https://d3aid59h00lu28.cloudfront.net/img/search.svg" width="15px" height="15px" alt="Search" class="settings_icon">
+                            <img src="https://d3aid59h00lu28.cloudfront.net/img/search.svg" width="15px" height="15px" alt="Search" class="settings_icon" crossorigin="anonymous">
                         </div>
 
                     </div>
@@ -425,9 +425,9 @@
     </a>
     <script src="popper.min.js"></script>
     <script src="tippy-bundle.umd.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js" crossorigin="anonymous"></script>
     <script src="fulltilt.js"></script>
-    <script src="script_n_dark.min.js"></script>
+    <script src="script_n_dark.js"></script>
 </body>
 </html>
