--- a/public/index.html
+++ b/public/index.html
@@ -6,24 +6,15 @@
     <meta
     name="description"           
     content="Самый точный прогноз на 7 дней в любой точке земного шара, 
-     используя метеостанции по всему миру. Без навязчивой рекламы."/>
-    <link async href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;700&display=swap" rel="stylesheet" rel="preload">
+     использующий метеостанции по всему миру."/>
+    <link async href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;700&display=swap" rel="stylesheet" rel="preconnect">
     <link rel="stylesheet" href="style.min.css">
     <title>OpenWindow | Fast service to deliver the most accurate forecast</title>
     <link rel="shortcut icon" rel="preload" href="https://d3aid59h00lu28.cloudfront.net/img/icons/icon.ico" type="image/x-icon" crossorigin="anonymous"> 
     <link rel="manifest" href="manifest.webmanifest">
     <link rel="apple-touch-icon" href="https://d3aid59h00lu28.cloudfront.net/img/icons/icon192.png" crossorigin="anonymous">
-    <link rel="canonical" href="https://open-window.herokuapp.com"/>
-
+    <link rel="canonical" href="https://www.openwindow.site"/>
     <meta name="theme-color" content="#55c1ff"/>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-165464526-1" rel="preconnect" crossorigin="anonymous"></script>
-    <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'UA-165464526-1');
-    </script>
 </head>
 <body>
     <video id="videoBG" autoplay='autoplay' muted='muted' loop='loop' playsinline class="no_opacity"></video>
