--- a/public/index.html
+++ b/public/index.html
@@ -202,7 +202,7 @@
                                         <div class="settings-subitem">
                                             
                                         <div class="sources_block">
-                                            <a href="https://www.youtube.com/watch?v=cAbJtTxU56E">Night Ambience</a>
+                                            <a href="https://www.youtube.com/watch?v=xi70viNuUSs">Night Ambience</a>
                                             <a href="https://www.youtube.com/watch?v=2txWH6IiRi4">Cloudy Sky</a>
                                             <a href="https://www.youtube.com/watch?v=vz91QpgUjFc">Snowfall at Day</a>
                                             <a href="https://www.youtube.com/watch?v=3SHG_U2R1mk">Snowfall at Night</a>
@@ -212,7 +212,13 @@
                                             <a href="https://www.youtube.com/watch?v=P6jP37U8QVI">Sleet</a>
                                             <a href="https://www.youtube.com/watch?v=W-GlO_1yrug">Partly Cloudy Night</a>
                                             <a href="https://www.youtube.com/watch?v=7WPsftkv1ZY">Windy Day</a>
-                                            <a href="https://www.youtube.com/watch?v=a9RqjDlhxtc">Clear Day</a>
+                                            <a href="https://www.youtube.com/watch?v=xi70viNuUSs">Clear Summer Day</a>
+                                            <a href="https://www.youtube.com/watch?v=czCHvDY23fc">Clear Autumn Day</a>
+                                            <a href="https://www.youtube.com/watch?v=i3L7f6vIC8U">Clear Spring Day</a>
+                                            <a href="https://www.youtube.com/watch?v=0YvUFAYD8lo">Winter Rain</a>
+                                            <a href="https://www.youtube.com/watch?v=8plwv25NYRo">Autumn Rain</a>
+                                            <a href="https://www.youtube.com/watch?v=EDbUOssBP-U">Spring Rain</a>
+                                            <a href="https://www.youtube.com/watch?v=Wver_dJ-X5c">Clear Winter Day</a>
                                         </div>
                                         </div>
                                     </div>
