--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,15 @@
     <link rel="apple-touch-icon" href="https://d3aid59h00lu28.cloudfront.net/img/icons/icon192.png" crossorigin="anonymous">
     <link rel="canonical" href="https://www.openwindow.site"/>
     <meta name="theme-color" content="#55c1ff"/>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-165464526-1"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-165464526-1');
+    </script>
 </head>
 <body>
     <video id="videoBG" autoplay='autoplay' muted='muted' loop='loop' playsinline class="no_opacity"></video>
