About dev update

--- a/public/index.html
+++ b/public/index.html
@@ -376,7 +376,7 @@
                 <div class="updating_footer">
                 </div>
                 <a href="https://darksky.net/poweredby/">Powered by Dark Sky API.</a>
-                <p> Copyright © <a href="mailto:klimov.studnweb@gmail.com">Vladislav Klimov,</a> <span></span>. All rights reserved.</p>
+                <p> Copyright © <a href="https://www.openwindow.site/about.html">Vladislav Klimov,</a> <span></span>. All rights reserved.</p>
             </div>
         </div>
     </div>
