--- a/public/about.html
+++ b/public/about.html
@@ -84,7 +84,7 @@
                         <br>
                         Участвовал в хакатоне
                         "Моя профессия цифрового будущего", 
-                        всероссийской олимпиаде по информатике; победитель всероссийского конкурса веб-сайтов "Мои увлечения" 2020 года.
+                        всероссийской олимпиаде по информатике; победитель всероссийского конкурса веб-сайтов "Мои увлечения" 2020 и 2021года.
                         <br>
                         Профиль <a href="https://vk.com/klimov_vlad938" class="link">ВКонтакте.</a> 
                         Электронная почта: <a href="mailto:klimov.studnweb@gmail.com" class="link">klimov.studnweb@gmail.com</a>
